--- a/index.html
+++ b/index.html
@@ -10,8 +10,14 @@
   <header>
     <h1>The Solar System</h1>
   </header>
-  <figure>
-  The Solar System
+
+<main>
+    <figure>
+      <img src="logo.svg" alt="">
+
+
+</main>
+
 
   [Stars]
   [Terrestrial planets]
