--- a/index.html
+++ b/index.html
@@ -8,23 +8,27 @@
 <body>
 
   <header>
+    <figure>
+      <img src="logo.svg" alt="">
+    </figure>
+
     <h1>The Solar System</h1>
   </header>
 
 <main>
-    <figure>
-      <img src="logo.svg" alt="">
-
+  <nav>
+    <ul>
+      <li><a href="#">Stars</a></li>
+      <li><a href="#">Terrestrial planets</a></li>
+      <li><a href="#">Gas giants</a></li>
+      <li><a href="#">Dwarf planets</a></li>
+      <li><a href="#">Asteroids</a></li>
+      <li><a href="#">Comets</a></li>
 
 </main>
 
 
-  [Stars]
-  [Terrestrial planets]
-  [Gas giants]
-  [Dwarf planets]
-  [Asteroids]
-  [Comets]
+
 
   ---
 
