--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <li><a href="#">Dwarf planets</a></li>
       <li><a href="#">Asteroids</a></li>
       <li><a href="#">Comets</a></li>
-
+  </nav>
 </main>
 
 
