Add image to main

--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
 
   <header>
     <figure>
-      <img src="logo.svg" alt="">
+      <svg>
+        <img src="logo.svg" alt="">
+      </svg>
     </figure>
 
     <h1>The Solar System</h1>
-
     <nav>
       <ul>
         <li><a href="#">Stars</a></li>
@@ -28,7 +29,10 @@
   </header>
 
 <main>
-
+  <figure>
+    <svg>
+      <img src="banner.svg" alt="">
+  </figure>
 </main>
 
 
