Add paragraph to main

--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
 
   <header>
     <figure>
-      <svg>
-        <img src="logo.svg" alt="">
-      </svg>
+      <img src="logo.svg" alt="">
     </figure>
 
     <h1>The Solar System</h1>
@@ -30,9 +28,9 @@
 
 <main>
   <figure>
-    <svg>
       <img src="banner.svg" alt="">
   </figure>
+  <p>The Solar System is the gravitationally bound system comprising the Sun and the planetary system that orbits it.</P>
 </main>
 
 
@@ -44,7 +42,5 @@
   The Solar System—our home in the stars
 
   ---
-
-  The Solar System is the gravitationally bound system comprising the Sun and the planetary system that orbits it.
 </body>
 </html>
