--- a/index.html
+++ b/index.html
@@ -30,17 +30,9 @@
   <figure>
       <img src="banner.svg" alt="">
   </figure>
+  <<figcaption>The Solar System—our home in the stars</figcaption>
   <p>The Solar System is the gravitationally bound system comprising the Sun and the planetary system that orbits it.</P>
 </main>
 
-
-
-
-  ---
-
-  {banner}
-  The Solar System—our home in the stars
-
-  ---
 </body>
 </html>
