--- a/index.html
+++ b/index.html
@@ -29,9 +29,10 @@
 <main>
   <figure>
       <img src="banner.svg" alt="">
+        <figcaption>The Solar System—our home in the stars</figcaption>
   </figure>
-  <<figcaption>The Solar System—our home in the stars</figcaption>
-  <p>The Solar System is the gravitationally bound system comprising the Sun and the planetary system that orbits it.</P>
+
+  <p>The Solar System is the gravitationally bound system comprising the Sun and the planetary system that orbits it.</p>
 </main>
 
 </body>
