--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <header>
     <figure>
-      <img src="logo.svg" alt="">
+      <img src="images/logo.svg" alt="">
     </figure>
 
     <h1>The Solar System</h1>
@@ -28,7 +28,7 @@
 
   <main>
     <figure>
-      <img src="banner.svg" alt="">
+      <img src="images/banner.svg" alt="">
       <figcaption>The Solar System—our home in the stars</figcaption>
     </figure>
 
